# mcproxy

./: .dev.env  .dockerignore  .env  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.external  README.md  am.toml  build.rs  compose.yml  cross-build.sh
.github/workflows/: build.yml  deploy.yml  rust.yml  test.yml
crates/discovery/: Cargo.toml
crates/discovery/src/: main.rs
crates/discovery/src/discovery/: docker.rs  mod.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
example/: compose.yml  config.alloy  config.toml  datasources.yml  tempo.yml
example/config/: config.toml
example/config/placeholder_servers/: no_mapping.toml  offline.toml
example/placeholder_servers/: no_mapping.toml  offline.toml
src/: bin.old.rs  bin.rs  config.rs  connection.rs  discovery.rs  lib.old.rs  main.rs  metrics.rs  proxy_server.rs  read.rs  signals.rs  trace.rs  ui.rs
src/config/: mod.rs  schema.rs  util.rs
src/discovery/: docker.rs
src/metrics/: minecraft_collector.rs  mod.rs  tokio_collector.rs
src/metrics/tokio_collector/: runtime.rs  task.rs
src/proto/: io.rs  mod.rs  packet.rs  packet_manipulation.rs  string.rs  var_int.rs
src/proto/io/: mod.rs  request.rs  response.rs
src/proto/packet/: mod.rs  response.rs
src/ui/: mod.rs
src/ui/config_table/: mod.rs  style.css
