[package]
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"
name    = "mcproxy"
version = "0.1.0"

[profile.release]
# debug = "line-tables-only"
lto = "thin"

[features]
schemars      = ["dep:schemars"]
telemetry     = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
tokio-console = ["dep:console-subscriber"]

[dependencies]
base64             = "0.22.1"
eyre               = "0.6.12"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
tokio              = { version = "1.38.0", features = ["full", "macros"] }
toml               = "0.8.14"
tracing            = "0.1.40"
tracing-error      = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# tokio-console
console-subscriber = { version = "0.3.0", optional = true }

# telemetry
opentelemetry                      = { version = "0.23.0", optional = true }
opentelemetry-otlp                 = { version = "0.16.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.15.0", optional = true }
opentelemetry_sdk                  = { version = "0.23.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry              = { version = "0.24.0", optional = true }

# schemars
schemars = { version = "1.0.0-alpha.2", optional = true }
