[package]
authors    = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition    = "2021"
license    = "MPL-2.0"
name       = "mcproxy"
repository = "https://github.com/dusterthefirst/mcproxy"
version    = "0.1.0"

[profile.release]
debug = "line-tables-only"
# debug = "limited"
lto = "thin"

[features]
default = ["metrics", "ui"]

# metrics
metrics = ["mcproxy_model/metrics", "dep:prometheus-client", "dep:tokio-metrics", "dep:vergen-gitcl"]

# ui
ui = ["dep:axum", "dep:tower-http"]

# Enable signal handling when running as pid1
pid1 = []

# Observability
telemetry     = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
tokio-console = ["dep:console-subscriber"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
schemars = { version = "1.0.0-alpha.2" }

eyre    = "0.6.12"
serde   = { version = "1.0", features = ["derive", "rc"] }
tokio   = { version = "1.38.0", features = ["full", "macros"] }
tracing = "0.1.40"

prometheus-client = { version = "0.22.2" }

mcproxy_discovery = { path = "./crates/discovery" }
mcproxy_model     = { path = "./crates/model" }

[dependencies]
base64             = "0.22.1"
eyre               = { workspace = true }
mcproxy_model      = { workspace = true }
serde              = { workspace = true }
serde_json         = "1.0"
tokio              = { workspace = true }
toml               = { version = "0.8.14", default-features = false, features = ["parse"] }
tracing            = { workspace = true }
tracing-error      = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# metrics
prometheus-client = { workspace = true, optional = true }
tokio-metrics     = { version = "0.3.1", optional = true }

# ui
axum       = { version = "0.7.5", default-features = false, features = ["http1", "macros", "tokio", "tracing"], optional = true }
tower-http = { version = "0.5.2", features = ["trace"], optional = true }

# tokio-console
console-subscriber = { version = "0.4.0", optional = true }

# telemetry
opentelemetry                      = { version = "0.24.0", optional = true }
opentelemetry-otlp                 = { version = "0.17.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.16.0", optional = true }
opentelemetry_sdk                  = { version = "0.24.1", features = ["rt-tokio"], optional = true }
tracing-opentelemetry              = { version = "0.25.0", optional = true }

[dev-dependencies]
schemars.workspace = true

[build-dependencies]
vergen-gitcl = { version = "1.0.0", optional = true }
